--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -34,8 +34,8 @@ jobs:
           config_timezone: Europe/Spain
           plugin_gists: no
           plugin_achievements: yes
+          plugin_achievements_display: compact
           plugin_habits: yes
-          plugin_habits_charts_type: classic
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_charts: yes
@@ -47,4 +47,5 @@ jobs:
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
           plugin_languages: yes
+          plugin_languages_sections: most-used
           plugin_traffic: yes
