--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -38,7 +38,7 @@ jobs:
           plugin_habits: yes
           plugin_habits_days: 14
           plugin_habits_facts: yes
-          plugin_habits_charts: yes
+          plugin_habits_charts: no
           plugin_habits_from: 200
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
